fix headers bug by wrappping all <h> and <Title> tags in <a> tags

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@
 }
 
 .header {
-  font-weight: 100;
+
   margin-top: 70px;
   margin-bottom: 70px;
   color: black
